Project structure: Extracted dev-tools into separate gradle project, renamed packages